--- a/src/interfaces/coral_web/package.json
+++ b/src/interfaces/coral_web/package.json
@@ -56,7 +56,6 @@
     "react-popper": "^2.3.0",
     "react-scroll-to-bottom": "^4.2.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-typist": "^2.0.5",
     "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.0",
     "remark": "^15.0.1",
@@ -67,6 +66,7 @@
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
+    "typewriter-effect": "^2.21.0",
     "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0",
     "zod": "^3.22.4",
